--- a/css/sticky-footer-navbar.css
+++ b/css/sticky-footer-navbar.css
@@ -6,14 +6,27 @@ html {
   }
   body {
     /* Margin bottom by footer height */
-    margin-bottom: 60px;
+    margin-bottom: 50px;
   }
   .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 60px;
-    line-height: 60px; /* Vertically center the text there */
+    height: 50px;
+    line-height: 50px; /* Vertically center the text there */
     background-color: #f5f5f5;
   }
+
+  .btn-outline-github {
+    color: #333;
+    border-color: #333;
+}
+
+.fab {
+  font-family: "Font Awesome 5 Brands";
+}
+
+.fa-github:before {
+  content: "\f09b";
+}
